Project and Game config
GameMode, GameInstance, Game Level, ThirdPersonCombatCharacter

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -2,14 +2,15 @@
 GameName=ThirdPersonCombat
 
 [/Script/EngineSettings.GameMapsSettings]
-EditorStartupMap=/Game/ThirdPersonBP/Maps/ThirdPersonExampleMap
-GameDefaultMap=/Game/ThirdPersonBP/Maps/ThirdPersonExampleMap
+EditorStartupMap=/Game/MyContent/Maps/Arena.Arena
+GameDefaultMap=/Game/MyContent/Maps/Arena.Arena
 TransitionMap=
 bUseSplitscreen=True
 TwoPlayerSplitscreenLayout=Horizontal
 ThreePlayerSplitscreenLayout=FavorTop
-GlobalDefaultGameMode=/Game/ThirdPersonBP/Blueprints/ThirdPersonGameMode.ThirdPersonGameMode_C
+GlobalDefaultGameMode=/Game/ThirdPersonBP/Blueprints/CombatGameMode.CombatGameMode_C
 GlobalDefaultServerGameMode=None
+GameInstanceClass=/Game/ThirdPersonBP/Blueprints/CombatGameInstance.CombatGameInstance_C
 
 [/Script/IOSRuntimeSettings.IOSRuntimeSettings]
 MinimumiOSVersion=IOS_12
